# gprolog-cmake

./: .gitignore  CMakeLists.txt  README.md  gplc-override.cmake  gplc.cmake
src/: CMakeLists.txt  application.pro  main.c
